Sort icon alignment corrected (#2166)

--- a/investigate-hosts/app/styles/investigate-hosts/components/host-list/_host-table.scss
+++ b/investigate-hosts/app/styles/investigate-hosts/components/host-list/_host-table.scss
@@ -35,6 +35,7 @@
     width: 20px;
   }
   .rsa-data-table-header-cell {
+    margin-right: -2px;
     button {
       cursor: pointer;
       &.column-sort {
